--- a/app/src/main/res/layout/activity_selected_brand.xml
+++ b/app/src/main/res/layout/activity_selected_brand.xml
@@ -8,10 +8,10 @@
 
     <ImageView
         android:id="@+id/imageView_brand"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@drawable/ducati"
-        android:layout_marginBottom="16dp" />
+        android:layout_width="58dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="16dp"
+        android:contentDescription="@drawable/ducati" />
     <TextView
         android:id="@+id/textView_brand_name"
         android:layout_width="wrap_content"
