--- a/app/src/main/res/layout/sample_recycleview.xml
+++ b/app/src/main/res/layout/sample_recycleview.xml
@@ -47,11 +47,26 @@
 
 
         <TextView
+            android:id="@+id/tvEdit"
+            android:layout_width="53dp"
+            android:layout_height="31dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="158dp"
+            android:layout_marginTop="16dp"
+            android:textColor="@color/black"
+            android:clickable="true"
+            android:layout_marginEnd="14dp"
+            android:layout_toEndOf="@+id/tvVehicleName"
+            android:text="Edit"
+            android:textSize="18sp" />
+
+        <TextView
             android:id="@+id/tvRegularServicing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/tvVehicleInfo"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="20dp"
             android:text="Regular Servicing"
             android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
